--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             min-height: 100vh;
         }
 
-        /* Login Page dengan Background dari Link Kamu */
+        /* Login Page */
         #login-page {
             background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('https://raw.githubusercontent.com/airnetcso/eps/main/image/bg.jpg') center/cover no-repeat fixed;
             min-height: 100vh;
@@ -33,17 +33,14 @@
         .login-container h1 {
             color: #1a237e;
             margin-bottom: 10px;
-            font-size: 1.8em;
         }
         .login-container p {
             color: #555;
             margin-bottom: 30px;
-            font-size: 1.1em;
         }
         .login-container h2 {
             color: #4a148c;
             margin-bottom: 30px;
-            font-size: 1.6em;
         }
 
         /* Quiz Page */
@@ -59,7 +56,7 @@
             padding-top: 90px;
         }
 
-        /* Header Fixed hanya Timer di kanan */
+        /* Header Fixed - Timer kanan */
         .header-fixed {
             position: fixed;
             top: 0;
@@ -97,116 +94,88 @@
             transition: width 0.5s ease;
         }
 
-        input {
-            padding: 16px;
-            margin: 12px 0;
-            width: 100%;
-            box-sizing: border-box;
-            border-radius: 12px;
-            border: 2px solid #bbb;
-            font-size: 1.1em;
-        }
-        input:focus {
-            border-color: #3f51b5;
-        }
-        #kode {
-            text-transform: uppercase;
-        }
-        button {
-            padding: 16px;
-            margin: 10px 0;
-            width: 100%;
-            background: #3f51b5;
-            color: white;
-            border: none;
-            border-radius: 12px;
-            font-size: 1.2em;
-            font-weight: bold;
-            cursor: pointer;
-        }
-        button:hover {
-            background: #283593;
-        }
-        .submit-btn {
-            background: #d50000;
-        }
-        .submit-btn:hover {
-            background: #b71c1c;
-        }
-
-        .question {
+        /* Box Soal Dibagi 2 */
+        .question-wrapper {
             display: none;
-            padding: 30px;
-            background: #f8f9fa;
-            border-radius: 16px;
-            margin-bottom: 30px;
+            margin-bottom: 40px;
         }
-        .question.active {
+        .question-wrapper.active {
             display: block;
         }
-        .question img {
-            max-width: 100%;
+
+        .box-passage {
+            background: #e3f2fd;
+            padding: 25px;
             border-radius: 16px;
-            margin: 20px 0;
-            box-shadow: 0 6px 20px rgba(0,0,0,0.15);
+            margin-bottom: 20px;
+            border: 2px solid #bbdefb;
         }
-        .question audio {
+        .box-passage audio {
             width: 100%;
-            margin: 20px 0;
+            margin: 15px 0;
+        }
+        .box-passage img {
+            max-width: 100%;
+            border-radius: 12px;
+            margin: 15px 0;
         }
 
-        /* Pilihan jawaban lingkaran kecil angka */
+        .box-question {
+            background: #fff3e0;
+            padding: 25px;
+            border-radius: 16px;
+            border: 2px solid #ffcc80;
+        }
+
         .options {
-            margin-top: 20px;
+            margin-top: 25px;
         }
         .option-item {
             display: flex;
             align-items: center;
-            margin: 18px 0;
-            font-size: 1.2em;
+            margin: 20px 0;
+            font-size: 1.25em;
         }
         .circle-number {
-            width: 38px;
-            height: 38px;
-            background: #333;
+            width: 42px;
+            height: 42px;
+            background: #000;
             color: white;
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
             font-weight: bold;
-            font-size: 1.1em;
-            margin-right: 18px;
+            font-size: 1.3em;
+            margin-right: 20px;
             flex-shrink: 0;
         }
         .option-text {
             flex: 1;
-            line-height: 1.4;
+            line-height: 1.5;
         }
         .option-item input[type="radio"] {
-            transform: scale(1.5);
-            margin-right: 15px;
+            transform: scale(1.6);
+            margin-right: 18px;
         }
 
-        /* Navigasi bawah: Previous kiri, Submit tengah, Next kanan */
         .nav-buttons {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-top: 40px;
+            margin: 40px 0;
             gap: 15px;
         }
         .nav-buttons button {
             flex: 1;
+            padding: 16px;
+            font-size: 1.2em;
         }
         #submit {
-            order: 2;
+            background: #d50000;
         }
-        #prev {
-            order: 1;
-        }
-        #next {
-            order: 3;
+        #submit:hover {
+            background: #b71c1c;
         }
 
         #result {
@@ -241,7 +210,7 @@
 </head>
 <body>
 
-    <!-- Login Page dengan Background -->
+    <!-- Login Page -->
     <div id="login-page">
         <div class="login-container">
             <h1>Latihan Reading Korea</h1>
@@ -273,9 +242,6 @@
             </div>
 
             <div id="result"></div>
-            <div style="text-align:center; margin-top:30px; display:none;" id="review-btn-container">
-                <button class="review-btn" onclick="startReview()">🔍 Review Jawaban</button>
-            </div>
         </div>
 
         <div class="footer">
@@ -311,7 +277,6 @@
         let currentFile = "";
         let currentUsername = "";
         let isSubmitted = false;
-        let isReviewMode = false;
 
         function login() {
             const user = document.getElementById('username').value.trim();
@@ -362,13 +327,19 @@
             const form = document.getElementById('quiz-form');
             form.innerHTML = '';
             questions.forEach((q, i) => {
-                const div = document.createElement('div');
-                div.className = 'question';
-                let html = `<p><strong>Passage ${i+1}:</strong><br>${q.passage}</p>`;
-                if (q.audio) html += `<audio controls><source src="${q.audio}" type="audio/mpeg">Audio tidak support</audio><br>`;
-                if (q.image) html += `<img src="${q.image}" alt="Gambar ${i+1}" loading="lazy">`;
-                html += `<p><strong>Pertanyaan ${i+1}:</strong><br>${q.question}</p>`;
-                html += `<div class="options">`;
+                const wrapper = document.createElement('div');
+                wrapper.className = 'question-wrapper';
+
+                let html = `
+                    <div class="box-passage">
+                        <p><strong>Passage ${i+1}:</strong><br>${q.passage}</p>
+                        ${q.audio ? `<audio controls><source src="${q.audio}" type="audio/mpeg">Browser tidak support audio.</audio>` : ''}
+                        ${q.image ? `<img src="${q.image}" alt="Gambar ${i+1}">` : ''}
+                    </div>
+                    <div class="box-question">
+                        <p><strong>Pertanyaan ${i+1}:</strong><br>${q.question}</p>
+                        <div class="options">
+                `;
 
                 const letters = ['1', '2', '3', '4'];
                 letters.forEach((letter, idx) => {
@@ -386,18 +357,18 @@
                     }
                 });
 
-                html += `</div>`;
-                div.innerHTML = html;
-                form.appendChild(div);
+                html += `</div></div>`;
+                wrapper.innerHTML = html;
+                form.appendChild(wrapper);
 
-                div.querySelectorAll('input[type="radio"]').forEach(radio => {
+                wrapper.querySelectorAll('input[type="radio"]').forEach(radio => {
                     radio.addEventListener('change', () => userAnswers[i] = radio.value);
                 });
             });
         }
 
         function showQuestion(n) {
-            document.querySelectorAll('.question').forEach((q, i) => q.classList.toggle('active', i === n));
+            document.querySelectorAll('.question-wrapper').forEach((q, i) => q.classList.toggle('active', i === n));
             document.getElementById('prev').disabled = n === 0;
             document.getElementById('next').disabled = n === totalQuestions - 1;
             document.getElementById('progress').style.width = ((n + 1) / totalQuestions * 100) + '%';
