--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -18,7 +16,6 @@ body{margin:0;font-family:'Segoe UI',Arial,sans-serif;background:#f5f5f5}
  align-items:center;
  background:linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)),
  url('https://raw.githubusercontent.com/airnetcso/eps/main/image/bg1.jpg') center/cover no-repeat;
- /* Animasi fadeInPage dihilangkan */
 }
 
 .login-container{
@@ -30,7 +27,6 @@ body{margin:0;font-family:'Segoe UI',Arial,sans-serif;background:#f5f5f5}
  backdrop-filter:blur(12px);
  border-radius:20px;
  box-shadow:0 8px 32px rgba(0,0,0,.4);
- /* Animasi slideUp dihilangkan */
 }
 
 .login-container h1{
@@ -65,9 +61,9 @@ button:hover{
  animation: pulse 1.5s infinite;
 }
 @keyframes pulse {
-  0%{box-shadow:0 4px 15px rgba(255,107,157,.4);}
-  50%{box-shadow:0 8px 30px rgba(255,107,157,.8);}
-  100%{box-shadow:0 4px 15px rgba(255,107,157,.4);}
+ 0%{box-shadow:0 4px 15px rgba(255,107,157,.4);}
+ 50%{box-shadow:0 8px 30px rgba(255,107,157,.8);}
+ 100%{box-shadow:0 4px 15px rgba(255,107,157,.4);}
 }
 
 /* COPYRIGHT - DIPINDAH KE LUAR BOX */
@@ -78,7 +74,7 @@ button:hover{
  text-shadow:0 1px 3px rgba(0,0,0,.8);
 }
 
-/* QUIZ & RESULT - TETAP SAMA, TIDAK DIUBAH */
+/* QUIZ & RESULT */
 #quiz-page{display:none;min-height:100vh;padding:70px 0;background:linear-gradient(#fdf6ec,#f7efe2)}
 .header-fixed{position:fixed;top:0;width:100%;display:flex;gap:6px;background:#fff;padding:6px;z-index:1000}
 .timer,.submit-top{flex:1;padding:12px 0;text-align:center;color:#fff;font-weight:bold}
@@ -109,208 +105,193 @@ button:hover{
 <body>
 
 <div id="login-page">
-  <div class="login-container">
-    <h1>LATIHAN SOAL</h1>
-    <h1>한국어연습</h1>
-    <p>25 Soal | 50 Menit</p>
-    <input id="username" placeholder="Username / 이름">
-    <input id="password" type="password" placeholder="Password / 비밀번호">
-    <input id="kode" placeholder="Kode Soal / 시험코드">
-    <button id="btnLogin">LOGIN / 로그인</button>
-    <!-- Copyright dipindah ke luar -->
-  </div>
-  <div class="copyright">© 2026 Denzuka - Kim Jongun. All Rights Reserved.</div>
+ <div class="login-container">
+ <h1>LATIHAN SOAL</h1>
+ <h1>한국어연습</h1>
+ <p>25 Soal | 50 Menit</p>
+ <input id="username" placeholder="Username / 이름">
+ <input id="password" type="password" placeholder="Password / 비밀번호">
+ <input id="kode" placeholder="Kode Soal / 시험코드">
+ <button id="btnLogin">LOGIN / 로그인</button>
+ </div>
+ <div class="copyright">© 2026 Denzuka - Kim Jongun. All Rights Reserved.</div>
 </div>
 
 <div id="quiz-page">
-  <div class="header-fixed">
-    <div class="submit-top" id="submitTop">SUBMIT</div>
-    <div class="timer" id="timer">50:00</div>
-  </div>
-  <div class="container"><form id="quiz-form"></form></div>
-  <div class="nav-bottom">
-    <button id="prev">PREV</button>
-    <button id="next">NEXT</button>
-  </div>
+ <div class="header-fixed">
+  <div class="submit-top" id="submitTop">SUBMIT</div>
+  <div class="timer" id="timer">50:00</div>
+ </div>
+ <div class="container"><form id="quiz-form"></form></div>
+ <div class="nav-bottom">
+  <button id="prev">PREV</button>
+  <button id="next">NEXT</button>
+ </div>
 </div>
 
 <div id="result-page">
-  <div class="result-box" id="resultBox"></div>
+ <div class="result-box" id="resultBox"></div>
 </div>
 
 <script>
-// Script 100% original, tidak ada perubahan sama sekali
-document.addEventListener("DOMContentLoaded",()=>{
-const loginPage=document.getElementById("login-page");
-const quizPage=document.getElementById("quiz-page");
-const resultPage=document.getElementById("result-page");
-const btnLogin=document.getElementById("btnLogin");
-const submitTop=document.getElementById("submitTop");
-const quizForm=document.getElementById("quiz-form");
-const timerEl=document.getElementById("timer");
-const resultBox=document.getElementById("resultBox");
+document.addEventListener("DOMContentLoaded",()=> {
+  const loginPage = document.getElementById("login-page");
+  const quizPage = document.getElementById("quiz-page");
+  const resultPage = document.getElementById("result-page");
+  const btnLogin = document.getElementById("btnLogin");
+  const submitTop = document.getElementById("submitTop");
+  const quizForm = document.getElementById("quiz-form");
+  const timerEl = document.getElementById("timer");
+  const resultBox = document.getElementById("resultBox");
 
-const validCredentials={
- "uus":"123",
- "user01":"12345",
- "hanarizka":"Nungkihana24!",
- "windi","Windi2000",
- "rismaya97","bahasakorea",
- "sita77","minyooki",
- "Aini185","Doraemon",
- "Hangeulfei","studykorea02",
- "Hamdan106","Fukuo106",
- "Heri","heri99",
-	"hanarizka","Nungkihana24!",
- "Fikrisurya","464646",
- "Mutiara2003","Mutiara14",
- "wantikas","200022",
- "Dininidia","dininidia11",
- "Hangeulfei","studykorea02",
- "kaniarostayuni9","Kania1313",
- "Dikisetiawan07","Diki2709",
- "Aisyah18","Aisyah18.",
- "Dininidia","dininidia11",
- "Hangeulfei","studykorea02",
- "Rizka2026","butterfly24",
- "Zhafif07","20060722",
- "Hangeulfei","studykorea02",
- "Hamdan106","Fukuo106",
- "Heri","heri99",
- "user3":"12345",
- "siswa01":"12345",
- "windi":"Windi2000",
- "rismaya97":"bahasakorea",
- "admin":"admin123",
- "Fikrisurya":"464646",
- "Mutiara2003":"Mutiara14",
- "sita77":"minyooki",
- "Aini185":"Doraemon",
- "Hangeulfei":"studykorea02",
- "Hamdan106":"Fukuo106",
- "koreafan":"hanguk789",
- "topik2026":"seoul2026"
-};
-const kodeMapping={
- "B12345":"soal1.json",
- "A09008":"soal2.json",
- "SAREWAE":"test.json",
- "W11765":"soal3.json",
- "H66633":"soal5.json"
-};
-const BASE="https://raw.githubusercontent.com/airnetcso/latbakor/main/soal/";
+  // Format array seperti yang kamu minta
+  const validCredentials = [
+    {username: "sita77", password: "minyooki"},
+    {username: "Aini185", password: "Doraemon"},
+    {username: "Hangeulfei", password: "studykorea02"},
+    {username: "Hamdan106", password: "Fukuo106"},
+    {username: "Heri", password: "heri99"},
+    // Tambahin lagi yang lain kalau perlu
+    {username: "uus", password: "123"},
+    {username: "windi", password: "Windi2000"},
+    {username: "rismaya97", password: "bahasakorea"},
+    {username: "hanarizka", password: "Nungkihana24!"},
+    {username: "Fikrisurya", password: "464646"},
+    {username: "Mutiara2003", password: "Mutiara14"},
+    {username: "wantikas", password: "200022"},
+    {username: "Dininidia", password: "dininidia11"},
+    {username: "kaniarostayuni9", password: "Kania1313"},
+    {username: "Dikisetiawan07", password: "Diki2709"},
+    {username: "Aisyah18", password: "Aisyah18."},
+    {username: "Rizka2026", password: "butterfly24"},
+    {username: "Zhafif07", password: "20060722"},
+    {username: "admin", password: "admin123"}
+  ];
 
-let questions=[],answers=[],current=0,time=3000,interval;
-let currentUser="", currentKode="";
+  const kodeMapping = {
+    "B12345": "soal1.json",
+    "A09008": "soal2.json",
+    "SAREWAE": "test.json",
+    "W11765": "soal3.json",
+    "H66633": "soal5.json"
+  };
 
-btnLogin.onclick=()=>{
- const u=document.getElementById("username").value.trim();
- const p=document.getElementById("password").value.trim();
- const k=document.getElementById("kode").value.trim().toUpperCase();
+  const BASE = "https://raw.githubusercontent.com/airnetcso/latbakor/main/soal/";
 
- if(validCredentials[u]===p && kodeMapping[k]){
- currentUser = u;
- currentKode = k;
- loginPage.style.display="none";
- quizPage.style.display="block";
- loadSoal(kodeMapping[k]);
- startTimer();
- }else{
- alert("Username / Password / Kode salah");
- }
-};
+  let questions = [], answers = [], current = 0, time = 3000, interval;
+  let currentUser = "", currentKode = "";
 
-async function loadSoal(file){
- questions=await (await fetch(BASE+file)).json();
- answers=Array(questions.length).fill(null);
- quizForm.innerHTML="";
- questions.forEach((q,i)=>{
- quizForm.innerHTML+=`
- <div class="question-wrapper">
- <div class="box-passage">
- ${q.audio?`<audio controls src="${q.audio}"></audio>`:""}
- ${q.image?`<img src="${q.image}">`:""}
- </div>
- <div class="box-question">
- <p><b>${i+1}.</b> ${q.question}</p>
- ${Object.entries(q.options).map(([k,v],idx)=>`
- <label class="option-item">
- <input type="radio" name="q${i}" value="${k}">
- <span class="option-circle">${idx+1}</span> ${v}
- </label>`).join("")}
- </div>
- </div>`;
- });
- document.querySelectorAll("input[type=radio]").forEach(r=>{
- r.onchange=()=>answers[+r.name.slice(1)]=r.value;
- });
- show(0);
-}
+  btnLogin.onclick = () => {
+    const u = document.getElementById("username").value.trim();
+    const p = document.getElementById("password").value.trim();
+    const k = document.getElementById("kode").value.trim().toUpperCase();
 
-function show(n){
- document.querySelectorAll("audio").forEach(a=>{a.pause();a.currentTime=0});
- document.querySelectorAll(".question-wrapper").forEach((q,i)=>q.classList.toggle("active",i===n));
- current=n;
-}
-document.getElementById("prev").onclick=()=>current>0&&show(current-1);
-document.getElementById("next").onclick=()=>current<questions.length-1&&show(current+1);
+    // Cek dari array
+    const userValid = validCredentials.find(cred => cred.username === u && cred.password === p);
 
-submitTop.onclick=()=>{
- const kosong=answers.findIndex(a=>a===null);
- if(kosong!==-1){alert("Soal "+(kosong+1)+" belum dijawab");show(kosong);return;}
+    if (userValid && kodeMapping[k]) {
+      currentUser = u;
+      currentKode = k;
+      loginPage.style.display = "none";
+      quizPage.style.display = "block";
+      loadSoal(kodeMapping[k]);
+      startTimer();
+    } else {
+      alert("Username / Password / Kode salah");
+    }
+  };
 
- clearInterval(interval);
- quizPage.style.display="none";
- resultPage.style.display="block";
+  async function loadSoal(file) {
+    questions = await (await fetch(BASE + file)).json();
+    answers = Array(questions.length).fill(null);
+    quizForm.innerHTML = "";
+    questions.forEach((q, i) => {
+      quizForm.innerHTML += `
+      <div class="question-wrapper">
+       <div class="box-passage">
+        ${q.audio ? `<audio controls src="${q.audio}"></audio>` : ""}
+        ${q.image ? `<img src="${q.image}">` : ""}
+       </div>
+       <div class="box-question">
+        <p><b>${i + 1}.</b> ${q.question}</p>
+        ${Object.entries(q.options).map(([k, v], idx) => `
+        <label class="option-item">
+         <input type="radio" name="q${i}" value="${k}">
+         <span class="option-circle">${idx + 1}</span> ${v}
+        </label>`).join("")}
+       </div>
+      </div>`;
+    });
+    document.querySelectorAll("input[type=radio]").forEach(r => {
+      r.onchange = () => answers[+r.name.slice(1)] = r.value;
+    });
+    show(0);
+  }
 
- let score=0,html="";
- questions.forEach((q,i)=>{
- const benar=q.answer;
- if(answers[i]===benar) score+=4;
- else html+=`
- <div class="wrong-item">
- <b>Soal ${i+1} salah</b><br>
- Jawaban benar: <span class="correct">${benar}</span><br>
- ${q.explanation||"-"}
- </div>`;
- });
+  function show(n) {
+    document.querySelectorAll("audio").forEach(a => { a.pause(); a.currentTime = 0; });
+    document.querySelectorAll(".question-wrapper").forEach((q, i) => q.classList.toggle("active", i === n));
+    current = n;
+  }
 
- const resultData = {
- username: currentUser,
- kode: currentKode || "-",
- nilai: score,
- tanggal: new Date().toLocaleString('id-ID'),
- app: "latbakor"
- };
+  document.getElementById("prev").onclick = () => current > 0 && show(current - 1);
+  document.getElementById("next").onclick = () => current < questions.length - 1 && show(current + 1);
 
- let allResults = JSON.parse(localStorage.getItem("quizResults") || "[]");
+  submitTop.onclick = () => {
+    const kosong = answers.findIndex(a => a === null);
+    if (kosong !== -1) { alert("Soal " + (kosong + 1) + " belum dijawab"); show(kosong); return; }
 
- const isDuplicate = allResults.some(r => 
- r.username === resultData.username &&
- r.kode === resultData.kode &&
- r.nilai === resultData.nilai &&
- r.app === resultData.app &&
- Math.abs(new Date(r.tanggal) - new Date(resultData.tanggal)) < 60000
- );
+    clearInterval(interval);
+    quizPage.style.display = "none";
+    resultPage.style.display = "block";
 
- if (!isDuplicate) {
- allResults.push(resultData);
- localStorage.setItem("quizResults", JSON.stringify(allResults));
- }
+    let score = 0, html = "";
+    questions.forEach((q, i) => {
+      const benar = q.answer;
+      if (answers[i] === benar) score += 4;
+      else html += `
+      <div class="wrong-item">
+       <b>Soal ${i + 1} salah</b><br><br>
+       Jawaban benar: <span class="correct">${benar}</span><br><br>
+       ${q.explanation || "-"}
+      </div>`;
+    });
 
- resultBox.innerHTML=`
- <h2>Nilai: ${score}</h2>
- ${html||"<p class='correct'>Semua jawaban benar 🎉</p>"}
- <div class="back-btn" onclick="location.reload()">KEMBALI</div>`;
-};
+    const resultData = {
+      username: currentUser,
+      kode: currentKode || "-",
+      nilai: score,
+      tanggal: new Date().toLocaleString('id-ID'),
+      app: "latbakor"
+    };
 
-function startTimer(){
- interval=setInterval(()=>{
- timerEl.textContent=String(Math.floor(time/60)).padStart(2,"0")+":"+String(time%60).padStart(2,"0");
- if(--time<0) submitTop.onclick();
- },1000);
-}
+    let allResults = JSON.parse(localStorage.getItem("quizResults") || "[]");
 
+    const isDuplicate = allResults.some(r =>
+      r.username === resultData.username &&
+      r.kode === resultData.kode &&
+      r.nilai === resultData.nilai &&
+      r.app === resultData.app &&
+      Math.abs(new Date(r.tanggal) - new Date(resultData.tanggal)) < 60000
+    );
+
+    if (!isDuplicate) {
+      allResults.push(resultData);
+      localStorage.setItem("quizResults", JSON.stringify(allResults));
+    }
+
+    resultBox.innerHTML = `
+     <h2>Nilai: ${score}</h2>
+     ${html || "<p class='correct'>Semua jawaban benar 🎉</p>"}
+     <div class="back-btn" onclick="location.reload()">KEMBALI</div>`;
+  };
+
+  function startTimer() {
+    interval = setInterval(() => {
+      timerEl.textContent = String(Math.floor(time / 60)).padStart(2, "0") + ":" + String(time % 60).padStart(2, "0");
+      if (--time < 0) submitTop.onclick();
+    }, 1000);
+  }
 });
 </script>
 </body>
